companyName to companyname
